# FreSH

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bin_register.c  bin_register.h  build.ps1  build.sh  builtins.c  builtins.h  command_parser.c  command_parser.h  error_handler.c  error_handler.h  git_branch.c  git_branch.h  history.c  history.h  main.c  shell_core.c  shell_core.h  shell_prompt.c  shell_prompt.h
.github/workflows/: release.yml
github/workflows/: release.yml
installation/: README.md  build.sh  installer.c  installer.h  main.c  tui.c  tui.h
